--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "hbs": "^4.0.1",
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.3.0",
-    "lodash": "^4.17.10",
+    "lodash": ">=4.17.10",
     "moment": "^2.22.1",
     "mongo": "^0.1.0",
     "mongodb": "^3.0.10",
